@@ -1,6 +1,6 @@
 package org.opensearch.client.opensearch._types.query_dsl;
 
-import java.util.List;
+import java.util.Collections;
 import org.junit.Test;
 import org.opensearch.client.opensearch._types.FieldValue;
 import org.opensearch.client.opensearch.model.ModelTestCase;
@@ -8,7 +8,7 @@ import org.opensearch.client.opensearch.model.ModelTestCase;
 public class PinnedQueryTest extends ModelTestCase {
     @Test
     public void toBuilder() {
-        PinnedQuery origin = new PinnedQuery.Builder().organic(buildDummyQuery()).ids(List.of("1")).build();
+        PinnedQuery origin = new PinnedQuery.Builder().organic(buildDummyQuery()).ids(Collections.singletonList("1")).build();
         PinnedQuery copied = origin.toBuilder().build();
 
         assertEquals(toJson(copied), toJson(origin));
