@@ -1,6 +1,6 @@
 package org.opensearch.client.opensearch._types.query_dsl;
 
-import java.util.List;
+import java.util.Collections;
 import org.junit.Test;
 import org.opensearch.client.opensearch.model.ModelTestCase;
 
@@ -8,7 +8,7 @@ public class SpanFieldMaskingQueryTest extends ModelTestCase {
     @Test
     public void toBuilder() {
         SpanFieldMaskingQuery origin = new SpanFieldMaskingQuery.Builder().field("field")
-            .query(new SpanQuery.Builder().spanOr(new SpanOrQuery.Builder().clauses(List.of()).build()).build())
+            .query(new SpanQuery.Builder().spanOr(new SpanOrQuery.Builder().clauses(Collections.emptyList()).build()).build())
             .build();
         SpanFieldMaskingQuery copied = origin.toBuilder().build();
 
